--- a/src/pages/ui-kit/form-elements.pug
+++ b/src/pages/ui-kit/form-elements.pug
@@ -3,7 +3,7 @@
 
 .wrapper-1
   include ../../components/input-field/input-field.pug
-  //- Инпуты: textfield, dropdown, date-dropdown, subscribe
+  //- Input types: textfield, dropdown, date-dropdown, subscribe
   //- Если type: dropdown, то передаем как минимум 3 аргумента
   
   +input-field(
