--- a/src/pages/ui-kit/form-elements.pug
+++ b/src/pages/ui-kit/form-elements.pug
@@ -81,11 +81,11 @@
   +input-field(
         {title: "Subscription text field", 
         type: "subscribe",
-        name: "filter-date-dropdown", 
-        id: "filter-date-dropdown", 
+        name: "subscription-text-field", 
+        id: "subscription-text-field", 
         hint: "",
         inputType: "text", 
         placeholder: "Email", 
         inputBlockClasses: ["col-xs"],
         inputBlockLabelClasses: [inputblock + "__label"],
-        inputFieldInputClasses: [inputfield + "__input", inputfield + "__input--dropdown"]})
+        inputFieldInputClasses: [inputfield + "__input"]})
