Kostyls made to dropdown to be properly bordered

--- a/src/components/input-field/input-field.scss
+++ b/src/components/input-field/input-field.scss
@@ -1,12 +1,12 @@
 $radius: 4px;
 .input-field {
   position: relative;
-  border: 1px solid $darkshade-25;
-  border-radius: 4px;
+  // border: 1px solid $darkshade-25;
+  border-radius: $radius;
   &__input {
     width: 100%;
     padding: 13px 15px;
-    border: 0;
+    border: 1px solid $darkshade-25;
     border-radius: $radius;
     color: $darkshade-75;
     font-size: 14px;
@@ -15,18 +15,23 @@ $radius: 4px;
     }
     &:focus {
       outline: none;
+      border-color: $darkshade-50;
     }
     &--dropdown {
       padding-right: 44px;
+    }
+    &--expanded {
+      border-radius: $radius $radius 0 0;
+      border-color: $darkshade-50;
     }
   }
   &--date {
     width: 150px;
   }
-  &:hover,
-  &:focus,
-  &--focused {
-    border-color: $darkshade-50;
-    outline: none;
-  }
+  // &:hover,
+  // &:focus,
+  // &--focused {
+  //   border-color: $darkshade-50;
+  //   outline: none;
+  // }
 }
