--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,15 +1,16 @@
-$radius: 4px;
 .dropdown {
   border-top: 1px solid $darkshade-50;
   margin: 0;
+  margin-top: -1px;
   padding: 7px 7px 7px 15px;
   background-color: $white;
+  border: 1px solid $darkshade-25;
   border-radius: 0 0 $radius $radius;
   display: none;
-  // position: absolute;
-  // width: 100%;
-  // z-index: 10;
-  // opacity: 0;
+  position: absolute;
+  width: 100%;
+  z-index: 10;
+  opacity: 0;
   &__item {
     display: flex;
     justify-content: space-between;
@@ -57,5 +58,6 @@ $radius: 4px;
   &--expanded {
     display: block;
     opacity: 1;
+    border-color: $darkshade-50;
   }
 }
