--- a/src/components/icons/icons.pug
+++ b/src/components/icons/icons.pug
@@ -1,5 +1,6 @@
-mixin icon(opt)
-  .icons
-    if opt.place == "input"
-      .icons__input
-        i(class= ["material-icons", opt.type]) #{opt.icon}
+- var input = "input"
+
+mixin icon(opt)  
+  if opt.place == input
+    .icons(class= ["icons--input"])
+      i(class= ["material-icons", opt.type]) #{opt.icon}
