added checkbox list. Alpha-version

--- a/src/pages/ui-kit/form-elements.pug
+++ b/src/pages/ui-kit/form-elements.pug
@@ -5,6 +5,7 @@
   include ../../components/input-field/input-field.pug
   //- Input types: textfield, dropdown, date-dropdown, subscribe
   //- Если type: dropdown, то передаем как минимум 3 аргумента
+  include ../../components/checkbox-list/checkbox-list.pug
   
   +input-field(
         {title: "Text Field",
@@ -89,3 +90,10 @@
         inputBlockClasses: ["col-xs"],
         inputBlockLabelClasses: [inputblock + "__label"],
         inputFieldInputClasses: [inputfield + "__input"]})
+  +checkbox-list(
+        {listTitle: "Checkbox Buttons",
+        labelClasses: [],
+        checkboxClasses: []},
+        {checkboxId: "",
+        checkboxTitle: "",
+        checkboxName: ""})
