--- a/src/components/checkbox-list/checkbox-list.pug
+++ b/src/components/checkbox-list/checkbox-list.pug
@@ -1,11 +1,11 @@
-mixin checkbox-list(options, checkboxList)
+mixin checkbox-list(options, ...checkboxList)
   if (typeof(options) !== null && typeof(options) !== undefined)
     if options.listTitle
       h3.checkbox-list__title #{options.listTitle}
     ul.checkbox-list
-      if (typeof(checkboxList) !== null && typeof(checkboxList) !== undefined)
-        - var list = checkboxList;
-        each item, index in list
-          li.checkbox-item
-            label(class=["as", options.labelClasses] for= checkboxList.checkboxId) #{checkboxList.checkboxTitle}
-            input(type="checkbox" class= ["as", options.checkboxClasses] id= checkboxList.checkboxId name= checkboxList.checkboxName)
+      //- if (typeof(checkboxList) !== null && typeof(checkboxList) !== undefined)
+        //- - var list = checkboxList;
+        //- each item, index in list
+          //- li.checkbox-item
+      //- label(class=["as", options.labelClasses] for= checkboxList.checkboxId) #{checkboxList.checkboxTitle}
+      //- input(type="checkbox" class= ["as", options.checkboxClasses] id= checkboxList.checkboxId name= checkboxList.checkboxName)
