--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -1,4 +1,5 @@
 mixin checkbox(options)
-  li.checkbox-item
-    label(class=["checkbox__label", options.labelClasses] for= options.checkboxId) #{options.checkboxTitle}
-    input(type="checkbox" class= ["checkbox__input", options.checkboxClasses] id= options.checkboxId name= checkboxList.checkboxName)
+  if (typeof(options) !== null)
+    li.checkbox-item
+      label(class=['checkbox__label']) #{options.title}
+        input(type='checkbox' class= ['checkbox__input'])
