--- a/src/components/icons/icons.pug
+++ b/src/components/icons/icons.pug
@@ -1,6 +1,6 @@
-- var input = "input"
+- var input = 'input'
 
 mixin icon(opt)  
   if opt.place == input
-    .icons(class= ["icons--input"])
-      i(class= ["material-icons", opt.type]) #{opt.icon}
+    .icons(class= ['icons--input'])
+      i(class= ['material-icons', opt.type]) #{opt.icon}
