--- a/src/components/checkbox-item/checkbox-item.scss
+++ b/src/components/checkbox-item/checkbox-item.scss
@@ -1,6 +1,11 @@
 $checkbox-size: 20px;
 .checkbox-item {
+  display: flex;
+  margin-top: 10px;
   list-style: none;
+  &:first-child {
+    margin-top: 0;
+  }
   &__label {
     position: relative;
     color: $darkshade-50;
@@ -32,10 +37,3 @@ $checkbox-size: 20px;
     // transition: all 0.5 ease-in-out;
   }
 }
-
-// position: absolute;
-// width: 6px;
-// height: 8px;
-// /* Primary Gradient */
-// background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-// transform: rotate(45deg);
