--- a/src/components/checkbox-list/checkbox-list.scss
+++ b/src/components/checkbox-list/checkbox-list.scss
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   &__title {
-    margin: 0;
+    position: relative;
+    margin: 15px 0 18px;
+    &--expandable {
+      padding-right: 44px;
+    }
   }
 }
