--- a/src/components/icons/icons.scss
+++ b/src/components/icons/icons.scss
@@ -21,6 +21,7 @@
     right: 0;
     transform: translateX(-10px);
     line-height: 15px;
+    color: $darkshade-50;
     &:hover {
       cursor: pointer;
     }
