added rich checkbox

--- a/src/components/checkbox-item/checkbox-item.scss
+++ b/src/components/checkbox-item/checkbox-item.scss
@@ -26,6 +26,20 @@ $checkbox-size: 20px;
       background: url('./misc/images/checked.svg') no-repeat 50% 40%;
     }
   }
+  &__title {
+    font-size: 14px;
+    line-height: 18px;
+    &--rich {
+      font-weight: 700;
+      color: $darkshade-75;
+    }
+  }
+  &__subtitle {
+    font-size: 12px;
+    line-height: 15px;
+    display: block;
+    margin-top: 5px;
+  }
   &__checkmark {
     position: absolute;
     top: 0;
